--- a/login.html
+++ b/login.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Git</title>
+<title>login</title>
 <meta charset="utf-8">
 
 </head>
 <body>
 <div>
-<p>这是一个Git</p>
 <p>login form</p>
 </div>
 </body>
